-bug#0001354: 0.8.7c to 0.8.8 update script bugs
-bug#0001359: Better error checking in rrd.php
-bug#0001366: Exported data templates do not import the special characters properly
-bug#0001397: Never use "Delete" as default action in any drop-list in cacti to avoid disaster
-bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"
-bug#0001428: segfault when database tables not present
-bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
-bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
-bug#0001444: ss_host_disk.php may return 0 instead of U when a host is not reachable
-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template
-bug#0001461: (Data Query) Export/Import fails
-bug#0001479: cli/add_device.php will modify existing devices
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001506: Reindexing fails in snmp.php
-bug#0001508: More min-height'ed divs when showing graphs
-bug#0001511: Speed up the processing of poller through bulk deletes
-bug#0001522: Special(?) charakters break parsing of template data.
-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
-bug#0001532: Various crashes in early stages of installation with no database populated.
-bug#0001534: IP:PORT Granularity issue in cli/add_device.php
-bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes
-bug#0001549: Database crashes with use of array_to_sql_or
-bug#0001557: Quotes in Text Format graph template field breaks graph
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
-bug#0001583: Crash on Large Deployments -> ini_set used to overwrite global php-config locally
-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems