@@ -449,8 +449,12 @@ function export() {
 		"/boot",
 		"/lib",
 		"/usr",
+		"/usr/bin",
 		"/bin",
 		"/sbin",
+		"/usr/sbin",
+		"/usr/lib",
+		"/var/lib",
 		"/root",
 		"/etc",
 		"windows",
@@ -458,7 +462,11 @@ function export() {
 		"program files");
 
 	foreach($system_paths as $system_path) {
-		if (substr_count(strtolower($cacti_export_path), strtolower($system_path)) > 0) {
+		if (substr($system_path, 0, 1) == "/") {
+			if ($system_path == substr($cacti_export_path, 0, strlen($system_path))) {
+				export_fatal("Export path '" . $cacti_export_path . "' is within a system path '" . $system_path . "'.  Can not continue.");
+			}
+		}elseif (substr_count(strtolower($cacti_export_path), strtolower($system_path)) > 0) {
 			export_fatal("Export path '" . $cacti_export_path . "' is within a system path '" . $system_path . "'.  Can not continue.");
 		}
 	}
@@ -527,8 +535,8 @@ function classical_export($cacti_root_path, $cacti_export_path) {
 		$sql_join
 		$sql_where
 		" . (empty($sql_where) ? "WHERE" : "AND") . " graph_templates_graph.local_graph_id > 0
+		AND graph_templates_graph.export='on'
 		AND graph_templates_graph.local_graph_id=graph_local.id";
-
 
 	$graphs = db_fetch_assoc("SELECT
 		graph_templates_graph.local_graph_id,
@@ -781,6 +789,7 @@ function export_tree_html($path, $filename, $tree_id, $parent_tree_item_id) {
 							WHERE graph_local.id=graph_templates_graph.local_graph_id
 							AND graph_templates_graph.graph_template_id=graph_templates.id
 							AND graph_local.host_id=" . $leaf["host_id"] . "
+							AND graph_templates_graph.export='on'
 							GROUP BY graph_templates.id
 							ORDER BY graph_templates.name");
 
@@ -991,7 +1000,8 @@ function build_html_file($leaf, $type = "", $array_data = array(), $snmp_index =
 			LEFT JOIN graph_local ON (graph_templates_graph.local_graph_id=graph_local.id)
 			LEFT JOIN host ON (host.id=graph_local.host_id)
 			$sql_join
-			$sql_where
+			$sql_where" . (strlen($sql_where) ? " AND ":"WHERE ") .
+			"graph_templates_graph.export='on'
 			ORDER BY graph_templates_graph.title_cache";
 
 		break;
@@ -1227,6 +1237,7 @@ function export_tree_graphs_and_graph_html($path, $tree_id) {
 		$sql_join
 		$sql_where
 		AND graph_tree_items.local_graph_id = graph_templates_graph.local_graph_id
+		AND graph_templates_graph.export='on'
 		ORDER BY graph_templates_graph.title_cache";
 
 	$non_host_graphs = db_fetch_assoc($non_host_sql);
@@ -1518,6 +1529,7 @@ function create_dhtml_tree_export($tree_id) {
 									WHERE graph_local.id=graph_templates_graph.local_graph_id
 									AND graph_templates_graph.graph_template_id=graph_templates.id
 									AND graph_local.host_id=" . $leaf["host_id"] . "
+									AND graph_templates_graph.export='on'
 									GROUP BY graph_templates.id
 									ORDER BY graph_templates.name");
 
